Fix spacing on deck row action buttons

--- a/app/assets/stylesheets/components/dashboard.scss
+++ b/app/assets/stylesheets/components/dashboard.scss
@@ -1,17 +1,18 @@
 .dashboard-sidebar {
   height: inherit;
-  width: 160px;
+  width: 340px;
   min-width: 160px;
   z-index: 2;
   top: 0;
   left: 0;
   background-color: #324054;
   overflow-x: hidden;
-  padding-top: 20px;
+  padding: 20px;
 }
 
 .dashboard {
   display: flex;
+  height: 100vh;
 }
 
 .deck-index {
@@ -59,7 +60,7 @@ a {
   border: 1px solid rgba(0,0,0,.15);
   border-radius: 4px;
   min-width: 160px;
-  padding: 10px 0px;
+  padding: 3px 11px;
   position: absolute;
   top: 37px;
   left: 136px;
@@ -282,6 +283,9 @@ li svg {
   text-align: center;
 }
 
+.action-buttons.deck-action-button {
+  justify-content: center;
+}
 
 .action-buttons {
   display: flex;
@@ -316,7 +320,7 @@ li.deck-selection-check-box, li.deck-mastery, .check-box, .deck-mastery {
   border: 1px solid rgba(0,0,0,.15);
   border-radius: 4px;
   min-width: 160px;
-  padding: 10px 0px;
+  padding: 3px 11px;
   position: absolute;
   top: 25px;
   left: -136px;
@@ -423,4 +427,8 @@ li.li-spacer {
 }
 .create-new-deck-row:hover .deck-row-contents .label-and-bar .new-deck-progress-bar {
   background-color: rgba(0,175,247,.16);
+}
+
+.pill-button-add-cards {
+  margin-right: 10px;
 }
