--- a/app/assets/stylesheets/components/modal.scss
+++ b/app/assets/stylesheets/components/modal.scss
@@ -31,6 +31,11 @@
    padding: 7px 9px;
    font-family: $sans-serif;
    cursor: pointer;
+   text-decoration: none;
+ }
+
+ li a:link {
+   text-decoration: none;
  }
 
  .pill-button.add-cards {
